css and html tweaks: made some progress on mobile first css fixed a few weird inconsistencies in the html file.

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,21 +17,81 @@ body {
 .hori {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-around;
     padding-top: 2vh;
     padding-bottom: 2vh;
 }
 
 .hori > * {
+    max-width: 60vw;
     flex: 1 100%;
 }
 
-@media all and (min-width: 768px)  {
+.main-logo {
+    max-width:50vw;
+    height: 30vw;
+}
+
+form {
+    background-color: #f28a37;
+    width: 400px;
+    height: 45px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+input {
+    all: unset;
+    font: 16px system-ui;
+    color: #fff;
+    height: 100%;
+    width: 100%;
+    padding: 6px 10px;
+}
+
+::placeholder {
+    color: #212121;
+    opacity: 0.7;
+}
+
+button {
+    all: unset;
+    cursor: pointer;
+    width: 45px;
+    height: 45px;
+}
+
+.searchbuttons {
+    color: #fff;
+    fill: currentColor;
+    width: 24px;
+    height: 24px;
+    padding: 10px;
+}
+
+.atoz {
+    background-color: #f28a37;
+    max-width: 33vw;
+    height: 32px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.atoz > button {
+    padding: 1vw;
+    text-align: center;
+}
+
+/*@media all and (min-width: 768px)  {
     .hori > * {
         flex: 1 auto;
     }
-}
+}*/
 
 /*.container {
     display: flex;
